# SubRenderer

./: .gitmodules  CMakeLists.txt  README.md  cmake_vs2017_uwp_x64.bat  cmake_vs2017_uwp_x86.bat  cmake_vs2017_x64.bat
RendererSamples/: BasicRenderer.cpp  BasicRenderer.h  BasicRendererShader.h  CMakeLists.txt  DirectXHelper.h  IRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  MeshFactory.cpp  MeshFactory.h  RendererSamples.cpp  RendererSamples.h  Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  Sample3DSceneRendererShader.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  ShaderStructures.h
RendererToolkit/: AppBase.h  CMakeLists.txt  CompileShaderFromFile.cpp  CompileShaderFromFile.h  CoreWindowAppBase.h  D3D11Renderer.cpp  D3D11Renderer.h  HWndAppBase.h  HWndWindow.cpp  HWndWindow.h  IDeviceManager.h  IMesh.h  IRenderTargetManager.h  IRendererWindow.h  IShaderPipeline.h  Mesh.cpp  Mesh.h  RendererToolkit.cpp  RendererToolkit.h  ShaderPipeline.cpp  ShaderPipeline.h  StepTimer.h  StringUtil.h  SwapchainManager.cpp  SwapchainManager.h  constantbuffer.cpp  shader.cpp  shader.h
_Sample/: CMakeLists.txt  main.cpp  pch.h
_Sample_CaptureFrame/: CMakeLists.txt  MyApp.cpp  main.cpp  pch.h
_Sample_CaptureFrame/Resources/: package.appxManifest
_Sample_Hololens/: AppView.cpp  AppView.h  CMakeLists.txt  CameraResources.cpp  CameraResources.h  DeviceResources.cpp  DirectXHelper.h  GeometryShader.hlsl  HolographicAppMain.cpp  HolographicAppMain.h  PixelShader.hlsl  ShaderStructures.h  SpatialInputHandler.cpp  SpatialInputHandler.h  SpinningCubeRenderer.cpp  SpinningCubeRenderer.h  VPRTVertexShader.hlsl  VertexShader.hlsl  pch.h
